# Desk

./: README.md  meson.build
config/system.d/: com.cuarzo.Desk.conf
scripts/: CONFIG
src/: Bus.h  Desk.pro  Desktop.cpp  Desktop.h  Item.cpp  Item.h  Shared.cpp  Shared.h  main.cpp
src/code/: Bus.cpp  Core.cpp  Core.h  Desktop.cpp  Desktop.h
